force-app/main/default/objects/Debug_Log__c/fields/Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name__c</fullName>
    <description>Name of the organization that logging occurred for.</description>
    <inlineHelpText>Name of the organization that logging occurred for.</inlineHelpText>
    <label>Organization Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>