force-app/main/default/objects/Debug_Log__c/fields/Summary_Value__c.field-meta.xml
<CustomField>
    <fullName>Summary_Value__c</fullName>
    <description>Summary of all lines written</description>
    <label>Summary Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>